force-app/main/default/objects/clofor_com_cfs__OFFER_LETTER__c/clofor_com_cfs__OFFER_LETTER__c.object-meta.xml
<CustomObject>
    <label>Offer Letter</label>
    <nameField>
        <displayFormat>OL-{0000}</displayFormat>
        <label>OFFER LETTER ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offer Letter</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>