force-app/main/default/objects/clofor_com_cfs__OFFER_LETTER__c/fields/clofor_com_cfs__Basesalary__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Basesalary__c</fullName>
    <label>Base Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>