force-app/main/default/objects/clofor_com_cfs__OFFER_LETTER__c/fields/clofor_com_cfs__Candidate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Candidate__c</fullName>
    <label>Candidate</label>
    <referenceTo>clofor_com_cfs__Recruitment_CRM__c</referenceTo>
    <relationshipLabel>OFFER LETTER</relationshipLabel>
    <relationshipName>OFFER_LETTER</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>