force-app/main/default/objects/clofor_com_cfs__OFFER_LETTER__c/fields/clofor_com_cfs__Grosssalary__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Grosssalary__c</fullName>
    <formula>clofor_com_cfs__Basesalary__c + clofor_com_cfs__Performancesalary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>