force-app/main/default/objects/clofor_com_cfs__OFFER_LETTER__c/fields/clofor_com_cfs__Joindate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Joindate__c</fullName>
    <label>Join Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>