force-app/main/default/objects/clofor_com_cfs__OFFER_LETTER__c/fields/clofor_com_cfs__offerstatus__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__offerstatus__c</fullName>
    <label>Offer status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for send</fullName>
                <default>true</default>
                <label>Waiting for send</label>
            </value>
            <value>
                <fullName>Sent to candidate</fullName>
            </value>
            <value>
                <fullName>Candidate reject</fullName>
            </value>
            <value>
                <fullName>Candidate accept</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>