force-app/main/default/objects/clofor_com_cfs__OFFER_LETTER__c/fields/clofor_com_cfs__Offervaliddate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Offervaliddate__c</fullName>
    <label>Offer valid date</label>
    <type>Date</type>
</CustomField>