force-app/main/default/objects/clofor_com_cfs__OFFER_LETTER__c/fields/clofor_com_cfs__Send_date__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Send_date__c</fullName>
    <label>Send date</label>
    <type>Date</type>
</CustomField>